--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
 SMTP_HOST=mail.felsen.com.tr
 SMTP_PORT=587
 SMTP_USER=felsezbt@felsen.com.tr
-SMTP_PASS=felsen3434!A
+SMTP_PASS="felsen3434!A"
 SMTP_FROM=felsezbt@felsen.com.tr
 SMTP_TO=danisman1@felsen.com.tr
